# crabidy

./: .editorconfig  Cargo.toml  Cross.toml  Draft.rnote  README.md  x86_64-unknown-linux-gnu-Dockerfile
.gitea/scripts/: check-tag
.gitea/workflows/: always.yml  main.yml  pull-requests.yml  release.yml  scheduled.yml
.gitea/workflows_backup/: release.yml
.github/workflows/: main.yml
audio-player/: Cargo.toml
audio-player/examples/: basic.rs
audio-player/src/: decoder.rs  lib.rs  main.rs  player.rs  player_engine.rs
cbd-tui/: Cargo.toml
cbd-tui/src/: config.rs  graphql.rs  main.rs  rpc.rs
cbd-tui/src/app/: library.rs  list.rs  mod.rs  now_playing.rs  queue.rs
crabidy/: Cargo.toml
crabidy-core/: Cargo.toml  build.rs
crabidy-core/crabidy/v1/: crabidy.proto
crabidy-core/proto/: crabidy.proto
crabidy-core/src/: lib.rs  proto.rs  query.graphql  query.rs  schema.graphql  schema.json
crabidy-server/: Cargo.toml  aarch64-unknown-linux-gnu-Dockerfile  armv7-unknown-linux-gnueabihf-Dockerfile
crabidy-server/src/: lib.rs  main.rs  playback.rs  provider.rs  rpc.rs
crabidy/src/: main.rs
stream-download/: Cargo.toml
stream-download/src/: lib.rs
tidaldy/: Cargo.toml
tidaldy/src/: config.rs  lib.rs  models.rs
