[package]
name = "cbd-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
crabidy-core = { path = "../crabidy-core" }
flume = "0.10.14"
ratatui = "0.20.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.9"
notify-rust = "4.8.0"
clap = "4.3.3"
clap-serde-derive = "0.2.0"
serde = "1.0.164"
toml = "0.7.4"
dirs = "5.0.1"
lazy_static = "1.4.0"
