[package]
name = "crabidy-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
graphql_client = "0.12.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
serde = "1.0.163"
# juniper = { version = "0.16.0", features = ["serde_json"] }

[build-dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
graphql_client = "0.12.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
serde = "1.0.163"
# juniper = { version = "0.16.0", features = ["serde_json"] }
